[package]
name = "zapper-fi"
version = "0.1.0"
authors = ["Christopher Mark Gore <cgore@cgore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # https://github.com/seanmonstar/reqwest
tokio = { version = "1", features = ["full"] }
