[package]
name = "zapper-fi"
version = "0.1.0"
authors = ["Christopher Mark Gore <cgore@cgore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zapper_fi"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # https://github.com/seanmonstar/reqwest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
