[package]
name = "zapper-fi"
version = "0.1.0"
authors = ["Christopher Mark Gore <cgore@cgore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zapper_fi"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.14", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21.1"
tokio = { version = "1", features = ["full"] }
ttl_cache = "0.5.1"
